--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -1,5 +1,5 @@
 <% include ../head.ejs %>
-	    <title>别人家-室内设计全景展示</title>
+	    <title>别人家-不只是别人的向往</title>
       <meta name="baidu-site-verification" content="LOj7c8F8vl" />
 	    <link rel='stylesheet' href='/stylesheets/index/index.css' />
 	    <script type="text/javascript" src="/javascripts/js/index/index.js"></script>
@@ -7,6 +7,7 @@
   	<body>  	
       <div class="title">
         <p class="main-title">别人家</p>
+        <p style="float: left; margin-left: -200rem;">我能给予的，只有别人家最美的样子&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <p class="sub-title">不同的空间，同样的向往</p>        
       </div> 
       <div class="beian-part">沪ICP备16027212号-1</div>     
