--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -7,7 +7,7 @@
   	<body>  	
       <div class="title">
         <p class="main-title">别人家</p>
-        <p style="float: left; margin-left: -200rem;">人与人各不相同，却都有一些相似。而我想给你看的，正是别人家最美的样子。&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p style="float: left; margin-left: -200rem;">：人与人各不相同，却都有一些相似，而我想给你看的，正是别人家最美的样子。&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <p class="sub-title">不同的空间，同样的向往</p>        
       </div> 
       <div class="beian-part">沪ICP备16027212号-1</div>     
