--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -12,7 +12,7 @@
                 <% if(!logStatus) {%>
                     <i class="iconfont login-img unlogged">&#xe632;</i>  
                 <% }else{%>
-                    <i class="iconfont login-img logged">&#xe605;<span class="unReadMsgCnt"></span></i>  
+                    <i class="iconfont login-img logged">&#xe605;</i>  
                 <%}%>
                 <span class="split-img"></span>
             </span>
