--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -5,11 +5,12 @@
 	    <script type="text/javascript" src="/javascripts/js/index/index.js"></script>
   	</head>
   	<body>  	
+        
+      <p style="float: left; color: #fff;">：人与人各不相同，却都有一些相似，而我想给你看的，正是别人家最美的样子。&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>     
       <div class="title">
         <p class="main-title">别人家</p>
-        <p style="float: left; margin-left: -200rem;">：人与人各不相同，却都有一些相似，而我想给你看的，正是别人家最美的样子。&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <p class="sub-title">不同的空间，同样的向往</p>        
       </div> 
-      <div class="beian-part">沪ICP备16027212号-1</div>     
+      <div class="beian-part"><a href="http://www.miitbeian.gov.cn/">沪ICP备16027212号-1</a></div>     
   	</body>
 </html>
