--- a/public/stylesheets/index/index.css
+++ b/public/stylesheets/index/index.css
@@ -27,6 +27,9 @@ body {
 	position: absolute;
 	bottom: 0.1rem;
 	text-align: center;
+}
+.beian-part a{
+	text-decoration: none;
 	font-size: 0.12rem;
 	color: #ddd;
 }
