--- a/views/pano/pano.ejs
+++ b/views/pano/pano.ejs
@@ -59,6 +59,10 @@
      </script>
 </head>
 <body>
+    <span class="good-point">
+        <span class="good-point-out"></span>
+        <span class="good-point-in"></span>
+    </span>
 <div>
     <i class="iconfont goBack">&#xe61d;</i>
 </div>
@@ -66,7 +70,6 @@
 <div id="compass"></div>
 
 <script>
-
     var settings = {
         GI:{
             canvas : document.getElementById('canvas'),
@@ -90,6 +93,20 @@
     var compass = new PanoAJK.Component.Compass(argsForCompass);
     qj.addComponent(compass);
     qj.draw();
+
+    function goodPtShine() {
+        var goodPtsJq = $('.good-point-out');        
+        function goodPtShine1() {
+            goodPtsJq.animate({'background': '#888', 'width': '0.26rem', 'height': '0.26rem', 'border-radius': '0.13rem', 'opacity': '0.2'}, 1300,  function() {
+                    goodPtsJq.css({ 'background': '#222', 'width': '0.1rem', 'height': '0.1rem', 'border-radius': '0.05rem', 'opacity': '0.8'});
+                    goodPtShine1();
+            });
+        }    
+        if (goodPtsJq.length) {
+            goodPtShine1();
+        }
+    }  
+    goodPtShine();
 </script>
 </body>
 </html>
