--- a/views/pano/pano.ejs
+++ b/views/pano/pano.ejs
@@ -59,10 +59,7 @@
      </script>
 </head>
 <body>
-    <span class="good-point">
-        <span class="good-point-out"></span>
-        <span class="good-point-in"></span>
-    </span>
+    <div id="all-goods-base" style="position: absolute; top: 0; left: 0"></div>
 <div>
     <i class="iconfont goBack">&#xe61d;</i>
 </div>
@@ -70,14 +67,51 @@
 <div id="compass"></div>
 
 <script>
+/*       pts : {"a":[{position:[-36.711931,-24.502305,89.732219],path:"resource/5842fa95a5ebde0133fe9bcd/b/",planPt:[40,70]}],
+                "b":[{position:[70.566856,-36.871385,-60.504709],path:"resource/5842fa95a5ebde0133fe9bcd/a/",planPt:[63,85]},{position:[26.053868,-65.562604,70.871299],path:"resource/5842fa95a5ebde0133fe9bcd/c/",planPt:[63,50]}],
+                "c":[{position:[34.341212,-52.466784,77.89684],path:"resource/5842fa95a5ebde0133fe9bcd/b/",planPt:[40,70]}]
+            }*/
+    var pts = JSON.parse(JSON.stringify(<%-panos%>));
     var settings = {
         GI:{
             canvas : document.getElementById('canvas'),
-            firstPath : "resource/5842fa95a5ebde0133fe9bcd/1-1/",
+            firstPath : "resource/5842fa95a5ebde0133fe9bcd/a/",
             smoothSwitch : true,
-            pts : {"1-1":[{position:[-36.711931,-24.502305,89.732219],path:"resource/5842fa95a5ebde0133fe9bcd/1-2/",name:"客厅",planPt:[40,70]}],
-                "1-2":[{position:[70.566856,-36.871385,-60.504709],path:"resource/5842fa95a5ebde0133fe9bcd/1-1/",name:"入口",planPt:[63,85]},{position:[26.053868,-65.562604,70.871299],path:"resource/5842fa95a5ebde0133fe9bcd/1-3/",name:"厕所",planPt:[63,50]}],
-                "1-3":[{position:[34.341212,-52.466784,77.89684],path:"resource/5842fa95a5ebde0133fe9bcd/1-2/",name:"客厅",planPt:[40,70]}]
+            pts: {
+                a: {
+                    neighs: {
+                        b: [-36.711931,-24.502305,89.732219]
+                    },
+                    goods: [{
+                        pos: [-30.711931,-30.502305,89.732219],
+                        info: {
+                            name: '电视',
+                            type: '电器',
+                            brand: 'TCL'
+                        }
+                    },{
+                        pos: [-15.711931,10.502305,89.732219],
+                        info: {
+                            name: '书架',
+                            type: '书架',
+                            brand: '宜家'
+                        }
+                    }]
+                },
+                b: {
+                    neighs: {
+                        a: [70.566856,-36.871385,-60.504709],
+                        c: [34.341212,-52.466784,77.89684]
+                    },
+                    goods: [{
+                        pos: [-30.711931,-30.502305,89.732219],
+                        info: {
+                            name: '电视',
+                            type: '电器',
+                            brand: 'TCL'
+                        }
+                    }]
+                }
             }
         }
     };
@@ -95,11 +129,18 @@
     qj.draw();
 
     function goodPtShine() {
+        var goodsJq = $('#all-goods-base');
+        goodsJq.on('tap', '.good-point', function(e) {
+            e.preventDefault();
+            e.stopPropagation();
+            alert(qj.Core.sys.pts[qj.Core.sys.ptName].goods[parseInt($(this).attr('id'))].info.name);
+            
+        })
         var goodPtsJq = $('.good-point-out');        
         function goodPtShine1() {
             goodPtsJq.animate({'background': '#888', 'width': '0.26rem', 'height': '0.26rem', 'border-radius': '0.13rem', 'opacity': '0.2'}, 1300,  function() {
                     goodPtsJq.css({ 'background': '#222', 'width': '0.1rem', 'height': '0.1rem', 'border-radius': '0.05rem', 'opacity': '0.8'});
-                    goodPtShine1();
+                    requestAnimationFrame(goodPtShine1);
             });
         }    
         if (goodPtsJq.length) {
