--- a/public/stylesheets/pano/pano.css
+++ b/public/stylesheets/pano/pano.css
@@ -68,6 +68,38 @@ body {
 	position: absolute;
 	top: -0.08rem;
 	left: 0.12rem;
-	padding: 0 0.04rem 0 0.2rem;
-	color: #eee;
+	padding: 0 0.05rem 0 0.1rem;
+	text-align: center;
+	color: #fff;
+}
+body .alert-good-area {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.5);
+}
+.alert-good-area .alert-good {
+	position: absolute;
+	width: 2rem;
+	height: 2.6rem;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%); 
+	background: #fff;
+	color: #76B3B4;
+	border-radius: 4px;
+	padding: 0.2rem;
+	line-height: 0.3rem;
+}
+.alert-good p {
+	border-bottom: 1px solid #eee;
+}
+.close-alert-cross {
+	position: absolute;
+	top: 0.02rem;
+	right: 0.03rem;
+	font-size: 0.2rem;
+	color: #76B3B4;
 }
