--- a/views/head.ejs
+++ b/views/head.ejs
@@ -11,6 +11,7 @@
 	    <script type="text/javascript" src="/javascripts/lib/touch.js"></script>
 	    <script type="text/javascript" src="/javascripts/lib/fx.js"></script>
 	    <script type="text/javascript" src="/javascripts/lib/underscore-min.js"></script>
+        <script type="text/javascript" src="/javascripts/lib/pano/built/Pano.js"></script>
 	    <script type="text/javascript">
 			var _hmt = _hmt || [];
 			(function() {
