--- a/public/stylesheets/iconfont/iconfont.css
+++ b/public/stylesheets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1483545689494'); /* IE9*/
-  src: url('iconfont.eot?t=1483545689494#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1483545689494') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1483545689494') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1483545689494#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1483774113366'); /* IE9*/
+  src: url('iconfont.eot?t=1483774113366#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1483774113366') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1483774113366') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1483774113366#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -60,6 +60,10 @@
 .icon-youxiang:before { content: "\e68b"; }
 
 .icon-denglu:before { content: "\e603"; }
+
+.icon-iconaddsmall:before { content: "\e62b"; }
+
+.icon-iconcutsmall:before { content: "\e62f"; }
 
 .icon-icon:before { content: "\e60f"; }
 
