--- a/public/stylesheets/pano/pano.css
+++ b/public/stylesheets/pano/pano.css
@@ -13,12 +13,23 @@ body {
 	width: 100%;
 	height: 100%;
 }
-.goBack {
+.go-back-area {
 	position: absolute;
 	top: 0.2rem;
 	left: 0.16rem;
-	font-size: 0.26rem;
-	color: #fff;
+	display: inline-block;
+	width: 0.32rem;
+	height: 0.32rem;
+	border-radius: 0.03rem;
+	background: #fff;
+	text-align: center;
+
+}
+.goBack {
+	line-height: 0.32rem;
+	font-size: 0.2rem;
+	color: #76B3B4;
+	font-weight: bold;
 }
 #compass {
 	position: absolute;
@@ -109,7 +120,7 @@ body .alert-good-area {
 	bottom: 0.32rem;
 	display: inline-block;
 	width: 0.32rem;
-	height: 0.88rem;
+	height: 1.4rem;
 }
 #magnifier .larger, #magnifier .smaller {
 	height: 0.32rem;
@@ -119,13 +130,30 @@ body .alert-good-area {
 	line-height: 0.36rem;
 	color: #76B3B4;
 }
-#magnifier .smaller {
-	margin-top: 0.24rem;
+#magnifier .slider {
+	height: 0.76rem;
+	position: relative;
+	text-align: center;
 }
+
 #magnifier .larger i, #magnifier .smaller i {
 	font-size: 0.24rem;
 }
-
-
+.slider .slider-axis {
+	display: inline-block;
+	width: 1px;
+	height: 100%;
+	background: #ccc;
+}
+.slider .level-line {
+	position: absolute;
+	z-index: 2;
+	display: inline-block;;
+	width: 60%;
+	height: 0.03rem;
+	top: 45%;
+	left: 20%;
+	background: #eee;
+}
 
 
