--- a/public/stylesheets/iconfont/iconfont.css
+++ b/public/stylesheets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1483774113366'); /* IE9*/
-  src: url('iconfont.eot?t=1483774113366#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1483774113366') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1483774113366') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1483774113366#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1483888525004'); /* IE9*/
+  src: url('iconfont.eot?t=1483888525004#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1483888525004') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1483888525004') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1483888525004#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -58,6 +58,10 @@
 .icon-33:before { content: "\e617"; }
 
 .icon-youxiang:before { content: "\e68b"; }
+
+.icon-shangpinduijie:before { content: "\e6c1"; }
+
+.icon-quanbushangpin:before { content: "\e692"; }
 
 .icon-denglu:before { content: "\e603"; }
 
