--- a/public/stylesheets/iconfont/iconfont.css
+++ b/public/stylesheets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1483888525004'); /* IE9*/
-  src: url('iconfont.eot?t=1483888525004#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1483888525004') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1483888525004') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1483888525004#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1484320976616'); /* IE9*/
+  src: url('iconfont.eot?t=1484320976616#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1484320976616') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1484320976616') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1484320976616#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -23,6 +23,8 @@
 
 .icon-dengluyonghu:before { content: "\e632"; }
 
+.icon-icon1:before { content: "\e61a"; }
+
 .icon-feiyong:before { content: "\e682"; }
 
 .icon-icon3:before { content: "\e607"; }
@@ -37,6 +39,8 @@
 
 .icon-xyfanhui01:before { content: "\e61d"; }
 
+.icon-doorhandle:before { content: "\e60c"; }
+
 .icon-dianbo:before { content: "\e600"; }
 
 .icon-dengjuanzhuang:before { content: "\e641"; }
@@ -47,7 +51,11 @@
 
 .icon-xihuan:before { content: "\e699"; }
 
+.icon-a2:before { content: "\e606"; }
+
 .icon-iconfontzan-copy:before { content: "\e601"; }
+
+.icon-camera:before { content: "\e611"; }
 
 .icon-liulan:before { content: "\e62e"; }
 
@@ -63,6 +71,8 @@
 
 .icon-quanbushangpin:before { content: "\e692"; }
 
+.icon-door:before { content: "\e6c3"; }
+
 .icon-denglu:before { content: "\e603"; }
 
 .icon-iconaddsmall:before { content: "\e62b"; }
@@ -72,6 +82,10 @@
 .icon-icon:before { content: "\e60f"; }
 
 .icon-menu:before { content: "\e605"; }
+
+.icon-tubiao25:before { content: "\e623"; }
+
+.icon-tubiao61:before { content: "\e642"; }
 
 .icon-liulan1:before { content: "\e7f7"; }
 
