--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -24,7 +24,7 @@
             <img src="/resource/<%=data._id.toString()%>/cover.jpg">
             <div class="info-tabs">
                 <span class="house-title"><%=data.title%></span>
-                <a href="/pano?id=<%=data._id%>"><i class="iconfont play-icon">&#xe604;</i></a>
+                <a><i class="iconfont play-icon" data-href="/pano?id=<%=data._id%>">&#xe623;</i></a>
                 <ul class="info-tabs__tabs">
                   <li class="info-tabs__tab tab--active"><a href="javascript:void(0);" data-href="#host-info">主人信息</a></li>
                   <li class="info-tabs__tab"><a  href="javascript:void(0);" data-href="#house-info">房屋信息</a></li>
