pano from mongodb

--- a/views/pano/pano.ejs
+++ b/views/pano/pano.ejs
@@ -105,5 +105,5 @@
         var pts = JSON.parse(JSON.stringify(<%-panos%>));
 </script>
 <script type="text/javascript" src="/javascripts/js/pano/pano.js"></script>
-</body>
+</body>;
 </html>
