--- a/views/pano/pano.ejs
+++ b/views/pano/pano.ejs
@@ -77,6 +77,9 @@
 </div>
 <canvas id="canvas">您的浏览器不支持canvas元素，赶紧更新吧</canvas>
 <div id="compass"></div>
+<div id="my-info">
+    <i class="iconfont">&#xe605;</i>
+</div>
 <div id="isGoodsShowed">
     <i class="iconfont show-goods">&#xe692;</i>
     <i class="iconfont no-show-goods">&#xe6c1;</i>
